// Protobuf version
syntax = "proto3";

// Current package, namespace
package auth;

// Generation settings
option go_package = "kanad4s.sso.v1;ssov1";

service Auth {
    // Register new user
    rpc Register (RegisterRequest) returns (RegisterResponse);
    // Login user and return token
    rpc Login (LoginRequest) returns (LoginResponse);
}

service Permissions {
    rpc GetUserPermissions (UserPermissionsRequest) returns (UserPermissions);
}

message RegisterRequest {
    // User email
    string email = 1;
    // User password
    string password = 2;
}

message RegisterResponse {
    // User id
    int64 user_id = 1;
}

message LoginRequest {
    // User email
    string email = 1;
    // User password
    string password = 2;
    // App id tp login
    int32 app_id = 3;
}

message LoginResponse {
    // Auth token of logged in user
    string token = 1;
}

message UserPermissionsRequest {
    // User id
    int64 user_id = 1;
}

message UserPermissions {
    // User permissions code
    int32 permissions = 1;
}